Configure backend for deployment on Render - Add Dockerfile, render.yaml, and environment variables support